--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 
 <body>
   <div id="app">
+    <h2 class="title is-2 has-text-centered">The leaderboard</h2>
     <div id="formAndButtons">
       <div v-if="!removeRepoOption" id="repoForm">
         <h3 class="title is-3 has-text-centered">Set Repo Options</h3>
@@ -33,14 +34,16 @@
       </div>
     </div>
 
-    <h3 class="title is-3 has-text-centered">Repo Name: {{repoName}}</h3>
-    <h5 class="subtitle is-5 has-text-centered">Owner: {{userName}}</h5>
-    <h2 v-if="totalCommits > 0" class="title is-2 has-text-centered">{{totalCommits}}</h2>
-    <h2 v-if="contribError" class="title is-2 has-text-centered">Error. Check your repo options and try loading again!</h2>
+    <div id="headersForStats">
+      <h3 class="title is-3 has-text-centered">Repo Name: {{repoName}}</h3>
+      <h5 class="subtitle is-5 has-text-centered">Owner: {{userName}}</h5>
+      <h2 v-if="totalCommits > 0" class="title is-2 has-text-centered">{{totalCommits}}</h2>
+      <h2 v-if="contribError" class="title is-2 has-text-centered">Error. Check your repo options and try loading again!</h2>
+    </div>
 
-    <div class="columns">
+    <div class="columns" id="theStats">
       <div id="leaderboardTableDiv" v-if="contributors.length > 0 && !contribError" class="column">
-        <table class="table is-bordered is-hoverable" id="leaderboardTable" >
+        <table class="table is-bordered is-hoverable" id="leaderboardTable">
           <thead>
             <tr>
               <th>Avatar</th>
